--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
 .App {
+  font-family: sans-serif;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  color: rgb(155, 30, 38);
+  position: relative;
+  top: 50px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.form{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 50px
 }
 
-.App-link {
-  color: #61dafb;
+.form input {
+  height: 50px;
+  margin-top: 20px;
+  border-radius: 10px;
+  padding: 5px;
+  background-color: rgb(255, 255, 255);
+  box-shadow: rgba(37, 36, 59, 0.05) 0px 4px 8px 0px;
+  border: 1px solid rgb(155, 30, 38);
+  outline: none;
+  caret-color:rgb(155, 30, 38);
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form ::placeholder{
+  color: rgb(155, 30, 38);
+  position: relative;
+  left: 10px;
+  box-shadow: rgba 0px 4px 8px 0px;
+}
+
+.form :last-child{
+  width: 30%;
+  color: #fff;
+  border: none;
+  background-color: rgb(155, 30, 38);
+  cursor: pointer;
 }
